# Woodworking

./: .pre-commit-config.yaml  InitGui.py  README.md  loadMenu.py  loadToolbar.py  loadTools.py  loadToolsAuto.py  loadToolsSettings.py  pyproject.toml
Docs/: MagicPanelsAPI.md  README.md  code.py  makeAPI.py  makeTOC.py
Examples/Fixture/: README.md
Examples/Parametric/: README.md
Tools/: colorManager.py  debugInfo.py  getDimensions.py  makeTransparent.py  scanObjects.py  setTextures.py  sheet2export.py  showSpaceModel.py  showSpaceSelected.py  x_magicAngle.py
Tools/MagicPanels/: MagicPanels.py  MagicPanelsController.py  RouterPatterns.py  align2Curve.py  cornerBlock.py  cornerBrace.py  cutDowels.py  cutTenons.py  drillCounterbores.py  drillCounterbores2x.py  drillCountersinks.py  drillHoles.py  drillReport.py  edge2dowel.py  edge2drillbit.py  fitModel.py  grainH.py  grainV.py  grainX.py  jointCustom.py  jointTenon.py  magicAngle.py  magicCNC.py  magicCorner.py  magicCut.py  magicCutLinks.py  magicDowels.py  magicDriller.py  magicFixture.py  magicJoints.py  magicKnife.py  magicKnifeLinks.py  magicManager.py  magicMeasure.py  magicMove.py  magicResizer.py  mapPosition.py  multiPocket.py  multiPocket2.py  multiPocket4.py  (+75 more)
translations/: README.md
