[tool.poetry]
name = "woodworking"
version = "0.1.0"
description = "FreeCAD is great software and this is extension for Woodworking. The main goal for this workbench is to make furniture designing process at FreeCAD more simple."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ssort = "^0.11.6"
isort = "^5.12.0"
pre-commit = "^3.5.0"
neovim = "^0.3.1"
ropevim = "^0.8.1"

[tool.isort]
profile = "black"
line_length = 120
lines_after_imports = 2
group_by_package = true

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | example
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
